--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,6 @@ edition = "2021"
 [dependencies]
 actix-web = "4.4.0"
 config = "0.13.3"
-httpmock = "0.6.8"
 lazy_static = "1.4.0"
 mongodb = "2.7.0"
 reqwest = "0.11.22"
@@ -16,3 +15,7 @@ serde = { version = "1.0.189", features = ["derive"] }
 serde_json = "1.0.107"
 tokio = { version = "1.33.0", features = ["full"] }
 url = "2.4.1"
+
+[dev-dependencies]
+httpmock = "0.6.8"
+testcontainers = "0.15.0"
