--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ serde = { version = "1.0.189", features = ["derive"] }
 serde_json = "1.0.107"
 tokio = { version = "1.33.0", features = ["full"] }
 url = "2.4.1"
+log = "0.4.20"
+env_logger = "0.10.0"
 
 [dev-dependencies]
 httpmock = "0.6.8"
